--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
 *.class
+    #java specific
+    *.class
+
+    #netbeans ignore personal stuff
+    nbproject/
+
+    ## generic files to ignore
+    *~
+    *.lock
+    *.DS_Store
+    *.swp
+    *.out
+
+    # Package Files #
+    *.jar
+    *.war
+    *.ear
 
 # Package Files #
 *.jar
